# search-agent

./: .gitignore  .ruff.toml  README.md  app.py  llm.py  pyproject.toml  pyrightconfig.json  test_api.py  test_brave.py
agent/: agent.py  chain.py  helper.py
llm/: agent.py  augmented_llm.py  graph.py  nodes.py  state.py
prompt/: system_prompt.txt
tools/: __init__.py  tools.py
