[project]
name = "search-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.9.3",
    "fastmcp>=2.13.3",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "pyright>=1.1.407",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.8",
    "trafilatura>=2.0.0",
]
