[project]
name = "search-agent"
version = "0.1.0"
description = "AI Agent with LangGraph and multi-tool support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "chainlit>=2.9.3",
    "fastmcp>=2.13.3",
    "langchain>=1.1.3",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-engineio>=4.12.3",
    "python-socketio>=5.15.0",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm", "tools"]
include = [
    "app.py",
    "prompt/",
    "README.md",
    ".env.example",
]